--- a/package.json
+++ b/package.json
@@ -26,15 +26,19 @@
     "babel-cli": "^6.9.0",
     "babel-plugin-syntax-async-functions": "^6.8.0",
     "babel-plugin-transform-async-to-generator": "^6.8.0",
-    "babel-preset-es2015-node4": "^2.1.0"
+    "babel-preset-es2015-node4": "^2.1.0",
+    "source-map-support": "^0.4.0"
   },
   "dependencies": {
-    "bluebird": "^3.4.0",
+    "bluebird": "^3.4.1",
     "chalk": "^1.1.3",
     "editor": "^1.0.0",
-    "mkdirp": "^0.5.1",
-    "source-map-support": "^0.4.0",
-    "yargs": "yargs/yargs"
+    "fs-extra": "^0.30.0",
+    "jsonfile": "^2.3.1",
+    "loud-rejection": "^1.6.0",
+    "nodegit": "^0.14.1",
+    "require-dir": "^0.3.0",
+    "yargs": "^4.7.1"
   },
   "babel": {
     "presets": [
@@ -44,10 +48,5 @@
       "syntax-async-functions",
       "transform-async-to-generator"
     ]
-  },
-  "chiery": {
-    "link": {
-      "hoge": "$HOME/.hoge"
-    }
   }
 }
