--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "babel-cli": "^6.9.0",
     "babel-plugin-syntax-async-functions": "^6.8.0",
     "babel-plugin-transform-async-to-generator": "^6.8.0",
-    "babel-preset-es2015-node4": "^2.1.0",
-    "source-map-support": "^0.4.0"
+    "babel-preset-es2015-node4": "^2.1.0"
   },
   "dependencies": {
     "bluebird": "^3.4.1",
@@ -38,6 +37,7 @@
     "loud-rejection": "^1.6.0",
     "nodegit": "^0.14.1",
     "require-dir": "^0.3.0",
+    "source-map-support": "^0.4.0",
     "yargs": "^4.7.1"
   },
   "babel": {
